--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descrption" content="estudio juridico comercio exterior">
+    <meta name="keywords" content="aduana, comercio exterior,abogados, derecho">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="assets/imagen/favicon.png">
     <title>Estudio Bax.com</title>
 </head>
 <body>
     <main>
-       <header id="header-flex" class="header-flex" > <h2>Estudio Juridico Bax</h2></header> 
-       
+       <header id="header-flex" class="header-flex" > <h1>Estudio Juridico Bax</h1></header> 
+       <!--barra de navegacion-->
        <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Estudio Juridco Bax</a>
@@ -57,11 +60,12 @@
       <div>
         <br>
         <div>
-        
+        <!-- mensaje central de pagina-->
             <div class="card-body">
               <h5 class="card-title">Especialistas en Comercio Exterior</h5>
-              <p class="cardp"> “Todo depende y resulta del cultivo de las tierras; sin él no hay materias primeras para las artes, por consiguiente, la industria, que no tiene cómo ejercitarse, no puede proporcionar materias para que el comercio se ejecute.” </p>
+              <p class="cardp"> “Todo depende y resulta del cultivo de las tierras; sin el no hay materias primeras para las artes, por consiguiente, la industria, que no tiene como ejercitarse, no puede proporcionar materias para que el comercio se ejecute.” </p>
               <img src="assets/imagen/balanza-justicia-fuentes-derecho.jpg" class="img-fluid" alt="Juridco" >
+              <!-- boton a pagina contacto -->
               <a href="contacto.html" target="_blank" > <button  class="boton"  > Contacto</button></a>
             </div>
           </div>
