--- a/contacto.html
+++ b/contacto.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descrption" content="estudio juridico comercio exterior, formulario de contacto">
+    <meta name="keywords" content="aduana, comercio exterior,abogados, derecho,contacto">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="assets/imagen/favicon.png">
     <title>Contacto</title>
 </head>
 <body>
     <main>
         <header id="header-flex" class="header-flex" > <h2>Estudio Juridico Bax</h2></header> 
-       
+       <!--barra de navegacion-->
        <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a href="index.html" class="navbar-brand" href="#">Estudio Juridco Bax</a>
@@ -55,8 +58,9 @@
         </div>
       </nav>
       <div>
+        <!--imagen de fondo-->
         <img src="assets/imagen/contacto.jpg" class="img-fluid" alt="Juridco">
-      
+      <!--formulario de contacto-->
       <div class="formulario">  <h2>Formulario de Contacto</h2>
 <form action="" method="post">
     <fieldset>
